gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: APP_PORT
              value: "8080"
            - name: APP_SERVICE_HOST
              value: jrsalinegateway.com
          image: noodleween/aline-gateway-ry:corretto
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
