user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: user
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: user
    spec:
      containers:
        - env:
            - name: APP_PORT
              value: "8070"
            - name: DB_HOST
              value: aline-database.costcsjsz8bj.us-east-1.rds.amazonaws.com
            - name: DB_NAME
              value: alinedb
            - name: DB_PASSWORD
              value: Penguin2016340
            - name: DB_PORT
              value: "3306"
            - name: DB_USERNAME
              value: admin
            - name: ENCRYPT_SECRET_KEY
              value: thisisagreatsecretkey!!!
            - name: JWT_SECRET_KEY
              value: WmZq4t7w!z%C&F)J@NcRfUjXn2r5u8x/
          image: noodleween/aline-user-ry:corretto
          name: user
          ports:
            - containerPort: 8070
          resources: {}
      restartPolicy: Always
status: {}
