user-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: user
  name: user
spec:
  ports:
    - name: "8070"
      port: 8070
      targetPort: 8070
  selector:
    io.kompose.service: user
  type: NodePort
status:
  loadBalancer: {}
